test/golden/error.assert.fail2.golden
Runtime error: a must be bigger than b
  ./test/golden/error.assert.fail2.jsonnet:2:3-3:8 function <subtract>
  ./test/golden/error.assert.fail2.jsonnet:5:1-10 